--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>1st project</title>
 </head>
 <body>
-<h1>Hello World! abcd</h1>
+<h1>Hello World!</h1>
 </body>
+<footer>
+	<p>COPYRIGHT 2017</p>	
+</footer>
 </html>
